# afw

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  api_reference.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: api_reference.doctree  getting_started.doctree  index.doctree
.doctrees/__intersphinx_cache__/: awkward_objects.inv  dask-awkward_objects.inv
.doctrees/modules/: afw.common.DileptonMassToPlot.doctree  afw.common.DiscriminantToPlot.doctree  afw.common.EtaToPlot.doctree  afw.common.NJetToPlot.doctree  afw.common.PtToPlot.doctree  afw.common.doctree  afw.doctree  (+26 more)
_sources/: api_reference.rst.txt  getting_started.rst.txt  index.rst.txt
modules/: afw.common.DileptonMassToPlot.html  afw.common.DiscriminantToPlot.html  afw.common.EtaToPlot.html  afw.common.NJetToPlot.html  afw.common.PtToPlot.html  afw.common.create_single_axis_histogram.html  afw.common.html  afw.common.plot_thing.html  afw.common.stacked_colors.html  afw.dataset.cached.do_request.html  afw.dataset.cached.get_all_matching.html  afw.dataset.cached.get_cross_section.html  afw.dataset.cached.html  afw.dataset.cached.persist_to_file.html  afw.dataset.cached.run_dasgoclient.html  afw.dataset.definitions.build_definitions.html  afw.dataset.definitions.convert_section.html  afw.dataset.definitions.convert_year.html  afw.dataset.definitions.html  afw.dataset.html  afw.dataset.local.build_datasets.html  afw.dataset.local.html  afw.dataset.local.is_vetoed.html  afw.dataset.print_summary.html  afw.dataset.skimmed.convert_to_skimmed.html  afw.dataset.skimmed.escape_name.html  afw.dataset.skimmed.html  afw.html  afw.objects.AnalysisConfig.html  afw.objects.ThingToPlot.html  afw.objects.html  afw.processor.MyProcessor.html  afw.processor.html
workflows/: docs.yaml
(+52 files in other folders)
