[build-system]
requires = ["hatchling>=1.17.1", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "afw"
description = "Wrapper around Coffea and other tools"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Nathan Nguyen", email = "nanguyen@crimson.ua.edu" },
]
maintainers = [
  { name = "Nathan Nguyen", email = "nanguyen@crimson.ua.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = [
  "coffea>=2025.12.0",
  "dotenv",
  "dask",
  "dask-jobqueue",
  "distributed",
  "pycurl",
  "rucio",
  "joblib"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/cmsua/afw"

[project.optional-dependencies]
dev = [
  "pre-commit",
  "sphinx",
  "pydata-sphinx-theme",
]


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/afw/_version.py"
